default.css
/*Variables*/

:root {
    --deftraback: rgba(229, 9, 20, .2) !important;
    --rounding: 5px;
    --accent: #E50914;
}


/*Highlight*/

::-moz-selection {
    background: var(--accent);
    text-shadow: none;
}

::selection {
    background: var(--accent);
    text-shadow: none;
}


/*fieldset*/

fieldset.verticalSection.verticalSection-extrabottompadding {
    border-radius: var(--rounding);
    border-color: #4d4d4d;
}


/*Square Cards and Portrait Cards*/

#loginPage .squareCard {
    width: 50% !important;
}

.layout-mobile .portraitCard {
    width: 50%;
}

@media all and (min-width: 32em) and (max-width: 100em) {
    .layout-mobile .portraitCard {
        width: 50%;
    }
}

.emby-input:focus,
.emby-textarea:focus {
    border-color: var(--accent);
}

#itemDetailPage button.cardImageContainer.coveredImage.cardContent.itemAction.lazy.blurhashed.lazy-image-fadein-fast {
    border-radius: 5px;
}


/*cardbox border-radius change*/

#indexPage button.cardImageContainer.cardContent.itemAction.lazy.blurhashed.lazy-image-fadein-fast,
.emby-scroller button.cardImageContainer.coveredImage.cardContent,
.childrenItemsContainer button.cardImageContainer.coveredImage.cardContent,
.nextUpItems button.cardImageContainer.cardContent.itemAction.lazy.blurhashed.lazy-image-fadein-fast,
.vertical-wrap button.cardImageContainer.coveredImage.cardContent,
.emby-scroller button.cardImageContainer {
    border-radius: 5px 5px 0px 0px !important;
}

.cardBox:not(.visualCardBox) .cardPadder,
.cardContent-shadow {
    box-shadow: none;
}

.cardBox.cardBox-bottompadded {
    background: rgba(0, 0, 0, 0.25);
}

.itemProgressBar {
    background: none;
    height: 928em;
}

.emby-checkbox:checked+span+.checkboxOutline,
.itemProgressBarForeground {
    background-color: var(--deftraback) !important;
}

.cardBox {
    box-shadow: 0px 0px 9px 0px rgb(0 0 0);
}


/*Theming video page*/

.videoOsdBottom {
    font-size: 110%;
}

.osdHeader {
    background: linear-gradient(180deg, rgba(16, 16, 16, .75), rgba(16, 16, 16, 0)) !important;
}

.layout-desktop .osdControls {
    max-width: 100%;
}

.mdl-slider::-webkit-slider-thumb {
    background: var(--accent);
}


/*Top Bar Transparent*/

#userImagePage,
#displayPreferencesPage,
#languagePreferencesPage,
#editItemMetadataPage,
#homeScreenPreferencesPage,
#dashboardPage,
#dashboardGeneralPage,
#userProfilesPage,
#devicesPage,
#serverActivityPage,
#liveTvStatusPage,
#liveTvSettingsPage,
#networkingPage,
#apiKeysPage,
#logPage,
#notificationSettingsPage,
#scheduledTasksPage,
#itemDetailPage {
    margin-top: 60px;
    padding-top: 0px !important;
    overflow: scroll;
}

@media all and (min-width: 100em) {
    #indexPage,
    #moviesPage,
    #tvRecommendedPage,
    #musicRecommendedPage {
        margin-top: 70px;
        padding-top: 0px !important;
        overflow: scroll;
    }
    #encodingSettingsPage,
    #mediaLibraryPage,
    #dlnaSettingsPage,
    #pluginsPage {
        margin-top: 60px;
        padding-top: 0px !important;
        overflow: scroll;
    }
}

@media all and (max-width: 100em) {
    #indexPage,
    #moviesPage,
    #tvRecommendedPage,
    #encodingSettingsPage,
    #mediaLibraryPage,
    #dlnaSettingsPage,
    #pluginsPage,
    #musicRecommendedPage {
        margin-top: 130px;
        padding-top: 0px !important;
        overflow: scroll;
    }
}

.skinHeader-withBackground {
    background-color: rgba(0, 0, 0, 0) !important;
}


/*Theming Indicators*/

.playedIndicator,
.countIndicator {
    border-radius: 5px;
    box-shadow: 0 0 15px -2px black;
}

.countIndicator,
.fullSyncIndicator,
.playedIndicator {
    background: #ffffffad;
    color: var(--accent);
}

.playedIndicator {
    background: var(--accent);
    color: white;
    box-shadow: 0 0 15px -2px black;
}

button.emby-tab-button.emby-button.emby-tab-button-active:hover {
    color: var(--accent) !important;
}

.emby-tab-button.show-focus:focus,
.emby-tab-button:hover {
    color: var(--accent) !important;
}


/*Theming Title Page*/

div#itemBackdrop {
    height: 100% !Important;
    z-index: 0;
    position: absolute;
    background-position: center center;
    width: 100%;
    background-size: cover;
    background-attachment: scroll;
}

div#itemBackdrop::after {
    background: linear-gradient(to top, #181819 0, rgba(24, 24, 24, .987) 1.62%, rgba(24, 24, 24, .951) 3.1%, rgba(24, 24, 24, .896) 4.5%, rgba(24, 24, 24, .825) 5.8%, rgba(24, 24, 24, .741) 7.06%, rgba(24, 24, 24, .648) 8.24%, rgba(24, 24, 24, .55) 9.42%, rgba(24, 24, 24, .45) 10.58%, rgba(24, 24, 24, .352) 11.76%, rgba(24, 24, 24, .259) 12.94%, rgba(24, 24, 24, .175) 14.2%, rgba(24, 24, 24, .104) 15.5%, rgba(24, 24, 24, .049) 16.9%, rgba(26, 24, 24, .013) 18.38%, rgba(24, 24, 24, 0) 20%), rgba(24, 24, 24, 0.35) !important;
}

div#itemBackdrop::before {
    content: "";
    top: 0;
    bottom: 0;
    right: -200px;
    left: 0;
    width: 35%;
    min-width: 500px;
    max-width: 800px;
    position: absolute;
    background: linear-gradient(to right, #181818 10%, rgba(24, 24, 24, .98) 20%, rgba(24, 24, 24, .97) 25%, rgba(24, 24, 24, .95) 35%, rgba(24, 24, 24, .94) 40%, rgba(24, 24, 24, .92) 45%, rgba(24, 24, 24, .9) 50%, rgba(24, 24, 24, .87) 55%, rgba(24, 24, 24, .82) 60%, rgba(24, 24, 24, .75) 65%, rgba(24, 24, 24, .63) 70%, rgba(24, 24, 24, .45) 75%, rgba(24, 24, 24, .27) 80%, rgba(24, 24, 24, .15) 85%, rgba(24, 24, 24, .08) 90%, rgba(24, 24, 24, .03) 95%, rgba(24, 24, 24, 0) 100%);
}

.detailPageSecondaryContainer {
    margin: 0em !important;
    background: transparent;
}

div#itemDetailPage {
    background: #181818;
    overflow-x: hidden;
}

.detailPagePrimaryContent {
    position: relative;
    width: 50%;
    padding-left: 1rem;
    background: transparent;
    padding-bottom: 5rem;
    min-height: 42vh;
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    text-shadow: 1px 1px 5px #181818;
}
/* ... */

